# poly-dearboard

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md
deployments/: Dockerfile
deployments/polyderboard-dev/: docker-compose.yml
development/: Dockerfile  docker-compose.yml
docs/: 0a-pnl-engine.md
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/charts/: LivePriceChart.tsx  PnlChart.tsx  SmartMoney.tsx
frontend/src/components/: AddToListButton.tsx  AuthGate.tsx  CategoryChip.tsx  EventActionChip.tsx  EventActions.tsx  LabelBadge.tsx  Layout.tsx  ReadinessBadge.tsx  Toast.tsx
frontend/src/components/Terminal/: AlertsTab.tsx  CommandPalette.tsx  CreateSessionModal.tsx  DetachedPanel.tsx  LiveFeedTab.tsx  OrdersTab.tsx  PositionList.tsx  (+12 more)
frontend/src/hooks/: useAlertLogger.ts  useAlerts.ts  useCopyTrade.ts  useCopyTradeLogger.ts  useOrderToast.ts  useRecentTraders.ts  useSignalFeed.ts  useTradeWs.ts  useTraderLists.ts  useWallet.ts
frontend/src/lib/: format.ts  labels.ts  readiness.ts  streamControls.ts
frontend/src/pages/: Activity.tsx  Alerts.tsx  Dashboard.tsx  MarketDetail.tsx  TraderDetail.tsx
indexer/: erpc.yaml  erpc_conf.yaml  polywatcher.yaml  polywatcher.yaml.bak
indexer/clickhouse/: init.sql
scripts/: deploy.sh  indexer.sh  queries.sh
src/: main.rs
src/api/: alerts.rs  auth.rs  contracts.rs  copytrade.rs  crypto.rs  db.rs  engine.rs  markets.rs  middleware.rs  mod.rs  routes.rs  scanner.rs  server.rs  types.rs  wallet.rs  ws_subscriber.rs
tests/: helpers.ts  package.json  wallet.test.ts
(+2 files in other folders)
