[package]
name = "poly-dearboard"
version = "0.1.0"
edition = "2024"

[dependencies]
rindexer = { path = "../rindexer/core" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.1.3", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
